@@ -2,6 +2,7 @@ package uk.gov.hmcts.reform.wataskmanagementapi.services;
 
 import feign.FeignException;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Component;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
@@ -20,7 +21,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.wataskmanagementapi.domain.DecisionTable.WA_TASK_CONFIGURATION;
 import static uk.gov.hmcts.reform.wataskmanagementapi.domain.DecisionTable.WA_TASK_PERMISSIONS;
@@ -34,6 +34,9 @@ public class DmnEvaluationService {
     private final CamundaServiceApi camundaServiceApi;
     private final AuthTokenGenerator serviceAuthTokenGenerator;
     private final CamundaObjectMapper camundaObjectMapper;
+
+    @Value("${config.fieldsToExcludeFromTrim}")
+    private List<String> fieldsToExcludeFromTrim;
 
     public DmnEvaluationService(CamundaServiceApi camundaServiceApi,
                                 AuthTokenGenerator serviceAuthTokenGenerator,
@@ -101,7 +104,13 @@ public class DmnEvaluationService {
                 jurisdiction.toLowerCase(Locale.ROOT),
                 new DmnRequest<>(new DecisionTableRequest(jsonValue(caseData), jsonValue(taskAttributes)))
             );
-            return dmnResponse.stream().map(CamundaHelper::removeSpaces).collect(Collectors.toList());
+            return dmnResponse.stream().map(response -> {
+                if (fieldsToExcludeFromTrim.contains(response.getName().getValue())) {
+                    return response;
+                } else {
+                    return CamundaHelper.removeSpaces(response);
+                }
+            }).toList();
         } catch (FeignException e) {
             log.error("Case Configuration : Could not evaluate from decision table '{}'", decisionTableKey);
             throw new IllegalStateException(
@@ -123,7 +132,7 @@ public class DmnEvaluationService {
                 jurisdiction.toLowerCase(Locale.ROOT),
                 new DmnRequest<>(new DecisionTableRequest(jsonValue(caseData), jsonValue(taskAttributes)))
             );
-            return dmnResponse.stream().map(CamundaHelper::removeSpaces).collect(Collectors.toList());
+            return dmnResponse.stream().map(CamundaHelper::removeSpaces).toList();
         } catch (FeignException e) {
             log.error("Case Configuration : Could not evaluate from decision table {}", decisionTableKey);
             throw new IllegalStateException(
